# Rust-code-sniffer-

./: .gitignore
ast-line/: .gitignore  Cargo.toml  README.md
ast-line/src/: augment.rs  community.rs  embeddings.rs  error.rs  group.rs  incremental.rs  indexer.rs  lib.rs  main.rs  meta.rs  parser.rs  process.rs  registry.rs  server.rs  symbols.rs  wiki.rs
ast-line/src/embedded/: ui.html
ast-line/src/graph/: mod.rs  store.rs
ast-line/src/mcp/: mod.rs  server.rs  tools.rs
ast-line/src/search/: bm25.rs  mod.rs
ast-line/tests/: indexer_tests.rs
gitnexus/: package-lock.json
gitnexus/src/core/: run-analyze.ts
gitnexus/src/core/ingestion/: file-hasher.ts  pipeline.ts  tree-sitter-queries.ts
gitnexus/src/core/ingestion/workers/: parse-worker.ts
gitnexus/src/storage/: repo-manager.ts
gitnexus/test/integration/: rust-decorator.test.ts
gitnexus/test/unit/: file-hasher.test.ts
rust-sniffer/: Cargo.toml  README.md  create-issues.sh
rust-sniffer/src/: error.rs  indexer.rs  lib.rs  main.rs  meta.rs  parser.rs  server.rs
rust-sniffer/src/embedded/: ui.html
rust-sniffer/tests/: indexer_tests.rs
