[package]
name = "rust-sniffer"
version = "0.1.0"
edition = "2021"
description = "A Rust source-code indexer with incremental re-indexing support, built on tree-sitter."
license = "MIT"
repository = "https://github.com/64BitAsura/Rust-code-sniffer-"

[[bin]]
name = "rust-sniffer"
path = "src/main.rs"

[lib]
name = "rust_sniffer"
path = "src/lib.rs"

[dependencies]
# Tree-sitter core + Rust grammar
tree-sitter = "0.26"
tree-sitter-rust = "0.24"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Incremental indexing — SHA-256 file fingerprints
sha2 = "0.10"
hex = "0.4"

# Directory walking
walkdir = "2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
